// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: initial;
  color: initial;
}

.emotion-1 {
  margin-top: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
}

.emotion-3 h2,
.emotion-3 h3,
.emotion-3 h4 {
  margin-top: unset;
}

.emotion-5 {
  position: relative;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: inherit;
  color: #001E2B;
  height: 27px;
  width: 27px;
  border: 1px solid #C1C7C6;
  font-weight: 400;
  font-size: 16px;
  line-height: 28px;
}

.emotion-10 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
}

.emotion-10 strong,
.emotion-10 b {
  font-weight: 700;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
  font-weight: inherit;
}

.emotion-12>code {
  color: #016BF8;
}

.emotion-12:focus,
.emotion-12:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-12:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-12:hover {
  text-decoration-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          1
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <p
          class="emotion-10"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-10"
        >
          <a
            class="emotion-12"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          2
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <p
          class="emotion-10"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-10"
        >
          <a
            class="emotion-12"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: initial;
  color: initial;
}

.emotion-1 {
  margin-top: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
}

.emotion-3 h2,
.emotion-3 h3,
.emotion-3 h4 {
  margin-top: unset;
}

.emotion-5 {
  position: relative;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: inherit;
  color: #001E2B;
  height: 27px;
  width: 27px;
  border: 1px solid #C1C7C6;
  font-weight: 400;
  font-size: 16px;
  line-height: 28px;
}

.emotion-10 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 32px;
  line-height: 40px;
  font-weight: 400;
  font-family: 'MongoDB Value Serif','Times New Roman',serif;
  color: #00684A;
  margin-top: 24px;
  margin-bottom: 8px;
  margin-top: 16px;
  margin-bottom: 24px;
}

.emotion-11 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-12 {
  color: #889397;
  vertical-align: middle;
  margin-top: -2px;
}

.emotion-13 {
  margin-top: -175px;
  position: absolute;
  padding-bottom: 2px;
}

.emotion-15 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
}

.emotion-15 strong,
.emotion-15 b {
  font-weight: 700;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          1
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <section>
          <h1
            class="contains-headerlink emotion-10"
            weight="medium"
          >
            Step 1
            <a
              class="headerlink emotion-11"
              href="#step-1"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-12"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-1"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 1
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          2
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <section>
          <h1
            class="contains-headerlink emotion-10"
            weight="medium"
          >
            Step 2
            <a
              class="headerlink emotion-11"
              href="#step-2"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-12"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-2"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 2
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          3
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <section>
          <h1
            class="contains-headerlink emotion-10"
            weight="medium"
          >
            Step 3
            <a
              class="headerlink emotion-11"
              href="#step-3"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-12"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-3"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 3
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          4
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <section>
          <h1
            class="contains-headerlink emotion-10"
            weight="medium"
          >
            Step 4
            <a
              class="headerlink emotion-11"
              href="#step-4"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-12"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-4"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 4
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          5
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <section>
          <h1
            class="contains-headerlink emotion-10"
            weight="medium"
          >
            Step 5
            <a
              class="headerlink emotion-11"
              href="#step-5"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-12"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-5"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 5
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          6
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <section>
          <h1
            class="contains-headerlink emotion-10"
            weight="medium"
          >
            Step 6
            <a
              class="headerlink emotion-11"
              href="#step-6"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-12"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-6"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 6
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          7
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <section>
          <h1
            class="contains-headerlink emotion-10"
            weight="medium"
          >
            Step 7
            <a
              class="headerlink emotion-11"
              href="#step-7"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-12"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-7"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 7
          </p>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: initial;
  color: initial;
}

.emotion-1 {
  margin-top: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
}

.emotion-3 h2,
.emotion-3 h3,
.emotion-3 h4 {
  margin-top: unset;
}

.emotion-5 {
  position: relative;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: inherit;
  color: #001E2B;
  height: 27px;
  width: 27px;
  border: 1px solid #C1C7C6;
  font-weight: 400;
  font-size: 16px;
  line-height: 28px;
}

.emotion-10 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
}

.emotion-10 strong,
.emotion-10 b {
  font-weight: 700;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
  font-weight: inherit;
}

.emotion-12>code {
  color: #016BF8;
}

.emotion-12:focus,
.emotion-12:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-12:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-12:hover {
  text-decoration-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          1
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <p
          class="emotion-10"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-10"
        >
          <a
            class="emotion-12"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          2
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <p
          class="emotion-10"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-10"
        >
          <a
            class="emotion-12"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
